recursion.lessons.recursion.square.FourSquare.scala.error
FourSquare:3: error: not found: value tourne
	tourne(90);
        ^FourSquare:5: error: not found: value tourne
	tourne(90);
        ^FourSquare:8: error: not found: value tourne
	tourne(90);
        ^FourSquare:11: error: not found: value tourne
	tourne(90);
        ^FourSquare:20: error: not found: value tourne
		tourne(90);
                ^FourSquare:22: error: not found: value tourne
		tourne(90);
                ^FourSquare:24: error: not found: value tourne
		tourne(90);
                ^FourSquare:26: error: not found: value tourne
		tourne(90);
                ^