recursion.lessons.recursion.square.FourSquare.scala.code
override def run() {
	faireCarre();
	tourne(90);
		faireCarre();
	tourne(90);

	faireCarre();
	tourne(90);

	faireCarre();
	tourne(90);




	
}
def faireCarre() {
		avance(100);
		tourne(90);
		avance(100);
		tourne(90);
		avance(100);
		tourne(90);
		avance(100);
		tourne(90);
	}